<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">


	<TableRow
        android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<Button
			android:text="@string/pushBtNamesButtonText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/pushNamesButton" />
	</TableRow>

	<TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5dp"><Button android:id="@+id/exportdbtosdbutton" android:layout_height="wrap_content" android:text="@string/ExportDB" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="bottom|left|fill_vertical"/><Button android:id="@+id/exportdbxmltosdbutton" android:layout_height="wrap_content" android:text="@string/ExportXML" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="bottom|fill_vertical|center"/>

	</TableRow>


	<TableRow android:id="@+id/TableRow04" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:layout_height="wrap_content" android:id="@+id/ImportDBButton" android:text="@string/ImportDB" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="left|fill_vertical"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ExportLocation" android:layout_weight="1" android:id="@+id/ExportLoc" android:layout_gravity="right|fill_vertical"></Button></TableRow><TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Path" android:text="Path will show here after export" android:textStyle="bold"></TextView></TableRow>


<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"><TextView android:text="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Output"></TextView></TableRow>




</LinearLayout>
